add duoshuo_share plugin

--- a/apps/blog/templates/post_detail.html
+++ b/apps/blog/templates/post_detail.html
@@ -53,6 +53,7 @@
         {% endfor %}
     </footer>
 
+    {% include "widget/duoshuo-share.html" %}
     {% include "widget/doushuo-comment.html" %}
 </article>
 
