--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
 <footer>
     <div class="container">
         <hr/>
-        <p class="text-center">Copyright <a href="http://foofish.net">ipotato.cc</a> &copy; 2016. All rights reserved.
+        <p class="text-center">Copyright <a href="http://ipotato.cc">ipotato.cc</a> &copy; 2016. All rights reserved.
             </p>
     </div>
 </footer>
